# tg-splitexpenses

./: .gitignore  Dockerfile  config.example.yaml  pyproject.toml
src/tgsplitexpenses/: __main__.py  config.py  gsheet.py  models.py  tgbot.py  utils.py
